[package]
name = "hamt2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
iroh = "0.96.1"
iroh-blobs = "0.98.0"
iroh-docs = "0.96.0"
iroh-gossip = "0.96.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["sync", "rt", "time", "io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
redb = "3.1.1"
tempfile = "3.27.0"
postcard = "1.1.3"
lru = "0.16.3"
bytes = "1.11.1"
tokio-stream = "0.1.18"
